Building the HTML and CSS structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SpaceX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="navigation">
+        <ul class="nav-links">
+            <li class="nav-item">Falcon 9</li>
+            <li class="nav-item">Falcon Heavy</li>
+            <li class="nav-item">Dragon</li>
+            <li class="nav-item">Starship</li>
+            <li class="nav-item">Human Spaceflight</li>
+            <li class="nav-item">Rideshare</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <div class="background" style="background-image:url('https://www.spacex.com/static/images/backgrounds-2022/ax-1/post-launch/Homepage_Axiom_1_Docking_DESKTOP.webp');"></div>
+
+        <div class="section-inner feature" style="height: 821px;">
+            <div class="inner-left-bottom">
+                <h2>Test</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="background" style="background-image:url('https://www.spacex.com/static/images/backgrounds-2022/crew-4/pre-launch/Homepage_Desktop.webp');"></div>
+
+        <div class="section-inner feature" style="height: 821px;">
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="background" style="background-image:url('https://www.spacex.com/static/images/backgrounds-2022/sl4-14/post-launch/Desktop_homepage_Starlink-4-14.webp');"></div>
+        <div class="section-inner feature" style="height: 821px;">
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="background" style="background-image:url('https://www.spacex.com/static/images/backgrounds-2022/starship-update/S20_Chopstick_Stack_Desktop.webp');"></div>
+
+        <div class="section-inner feature" style="height: 821px;">
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="background" style="background-image:url('https://www.spacex.com/static/images/backgrounds-2021/hls-resized-2.webp');">
+        
+        </div>
+
+        <div class="section-inner feature" style="height: 821px;">
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer></footer>
 </body>
 </html>
