Navigation links and responsive design

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
                     </ul>
                 </div>
             </div>
-            <button></button>
+            <button id="handburger" aria-expanded="false" aria-controls="menu" aria-label="Menu">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
+            </button>
 
         </div>
 
@@ -86,8 +90,8 @@
 
             <div class="section-inner feature" style="height: 821px;">
                 <div class="inner-left-bottom">
-                    <h4 class="animate">Upcoming Return</h4>
-                    <h2 class="animate-shadowed">Ax-1 to Depart from the International Space Station</h2>
+                    <h4 class="animate">Upcoming Launch</h4>
+                    <h2 class="animate-shadowed">Crew-4 Mission</h2>
                     <a class="btn animate" href="/launches/ax-1/"></a>
                 </div>
             </div>
@@ -97,8 +101,8 @@
             <div class="background" style="background-image:url('https://www.spacex.com/static/images/backgrounds-2022/sl4-14/post-launch/Desktop_homepage_Starlink-4-14.webp');"></div>
             <div class="section-inner feature" style="height: 821px;">
                 <div class="inner-left-bottom">
-                    <h4 class="animate">Upcoming Return</h4>
-                    <h2 class="animate-shadowed">Ax-1 to Depart from the International Space Station</h2>
+                    <h4 class="animate">Recent Launch</h4>
+                    <h2 class="animate-shadowed">Starlink Mission</h2>
                     <a class="btn animate" href="/launches/ax-1/"></a>
                 </div>
             </div>
@@ -109,8 +113,7 @@
 
             <div class="section-inner feature" style="height: 821px;">
                 <div class="inner-left-bottom">
-                    <h4 class="animate">Upcoming Return</h4>
-                    <h2 class="animate-shadowed">Ax-1 to Depart from the International Space Station</h2>
+                    <h2 class="animate-shadowed">Starship Update</h2>
                     <a class="btn animate" href="/launches/ax-1/"></a>
                 </div>
             </div>
@@ -123,8 +126,7 @@
 
             <div class="section-inner feature" style="height: 821px;">
                 <div class="inner-left-bottom">
-                    <h4 class="animate">Upcoming Return</h4>
-                    <h2 class="animate-shadowed">Ax-1 to Depart from the International Space Station</h2>
+                    <h2 class="animate-shadowed">Starship to land NASA Astronauts on the moon</h2>
                     <a class="btn animate" href="/launches/ax-1/"></a>
                 </div>
             </div>
